Header bugs - added sign-up-link, fixed paths & overlap (#62)
* Header-links with children links to first child desktop

* Add Sign up to locales & header-menu-links

* Update Sign In path to account-site

* Update headerMenuItem to accommodate for possible external links

* Fixed header-dropdown's z-index conflict with product-view

--- a/src/scss/productView.scss
+++ b/src/scss/productView.scss
@@ -22,9 +22,7 @@
 
 .product-try-it-for-free-desktop-wrapper {
   grid-area: aside;
-  position: relative;
-  top: -225px;
-  margin: 0 0 -200px 0;
+  margin: -220px 0 $margin-desktop 0;
   width: 450px;
 
   &.premium {
